--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -243,5 +243,13 @@ Position findNext(Position start, String string);
 - 存到全局变量；
 - context object。
 
+## 降低复杂性
 
+> 一个模块有一个简单的接口比一个简单的实现更重要。
+
+## 在一起还是分开？
+
+功能、系统、函数、类、方法、服务。
+
+目标是减少复杂性，增加模块行。
 
