--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -24,6 +24,8 @@ categories: CS
 
 > 复杂性是渐增的。
 
+--- 
+
 ## 战术与战略编程
 
 - 战术：着眼于使功能尽快运行；
@@ -53,6 +55,7 @@ categories: CS
 
 > 10% - 20% 的时间用来投资。
 
+--- 
 
 ## 模块应该 Deep
 
@@ -91,6 +94,8 @@ categories: CS
 - cost: 对于复杂性来说就是接口。
 
 > 接口应该使常见情况越简单越好。
+
+--- 
 
 ## 信息的隐藏（和泄漏）
 
@@ -186,6 +191,8 @@ Position findNext(Position start, String string);
 - 这个方法在多少情况下回被使用；
 - 当前需求下这个 `API` 用的简单么。
 
+--- 
+
 ## 不同层，不同抽象
 
 软件系统由多个层组成。较高的层使用较低层提供的设施。良好设计的系统，每层提供不同的抽象。
@@ -243,9 +250,13 @@ Position findNext(Position start, String string);
 - 存到全局变量；
 - context object。
 
+--- 
+
 ## 降低复杂性
 
 > 一个模块有一个简单的接口比一个简单的实现更重要。
+
+--- 
 
 ## 在一起还是分开？
 
@@ -253,3 +264,27 @@ Position findNext(Position start, String string);
 
 目标是减少复杂性，增加模块行。
 
+- 一些复杂性原子组件的数量：组件越多越难找到想要的；
+- **细分**可能导致多的代码来管理组件；
+- **细分**可能导致组件更加分散；
+- **细分**可能导致重复；
+
+下面时两片代码相关联的表现：
+- 共享信息；
+- 共同使用：用了一个代码也会用另一个代码；
+- 概念上重叠：有一个简单的高级类，包括这两段代码；
+- 不看另一个代码不能了解这个代码。
+
+### 如果共享信息就在一起
+
+### 如果能简化接口就在一起
+
+### 在一起来消除重复
+
+### 分离通用与特殊用途代码
+
+如果模块包含可用于多种不同目的的机制，则它应**仅提供一种通用机制**。 它**不应包含专门针对特定用途的机制的代码**，也**不应包含其他通用机制**。
+
+与通用机制关联的专用代码通常应**放在不同的模块**中（通常是与特定用途关联的模块）。
+
+> 通常，系统低层更具通用性，而高层更特殊用途。分离，就是把特殊用途的代码上移。
