--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -141,7 +141,9 @@ categories: CS
 
 **e.g.** 一个程序对于一种文件格式的读、写、修改在时间解构下可能分为 3 个类。所有的这些类都需要知道文件格式的知识，造成了信息泄漏。
 
-## 通用模块都 `Deeper`
+--- 
+
+## 通用模块都 Deeper
 
 设计一个新的模块时需要考虑是使用 `general-purpose` 还是 `special-purpose` 方式来实现它。
 
@@ -223,7 +225,6 @@ Position findNext(Position start, String string);
 
 
 ### 什么时候接口重复是 OK 的？
-
 
 - `dispatcher`；
 - 接口有多个实现；
