--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -289,3 +289,69 @@ Position findNext(Position start, String string);
 与通用机制关联的专用代码通常应**放在不同的模块**中（通常是与特定用途关联的模块）。
 
 > 通常，系统低层更具通用性，而高层更特殊用途。分离，就是把特殊用途的代码上移。
+
+### 分开合并方法
+
+您不应该分解一种方法，除非它使整个系统更加简单。
+
+设计方法时，最重要的目标是**提供简洁的抽象**。每种**方法**都**应该做一件事**并且**完全做到这一点**。
+
+- 方法应该有个间接和简单的接口；
+- 方法应该 Deep：接口比实现简单。
+
+
+仅当导致**更清晰的抽象**时，**分开方法**才有意义。
+
+
+#### 将子任务分解为单独的方法
+
+子方法包含子任务，父方法包含原来方法剩下部分。仅当：
+
+- 读子方法的代码不需要知道父方法；
+- 读父方法的代码不需要知道子方法的实现。
+
+> 就是阅读代码不需要反复横跳。
+
+#### 分成两个方法，每个方法对原方法的调用者可见
+
+仅针对**原方法有复杂的接口**（因为要做许多不紧密关联的事情）。
+
+---
+
+## Define Errors Out Of Existence
+
+减少需要处理异常的地方的数量。
+
+### 为什么异常增加复杂性
+
+异常：任何会**改变程序中正常控制流程**的**不常见条件**。
+
+产生异常：
+- 调用者提供了错的实参或者配置信息；
+- 被调用方法不能完成任务：`I/O` 操作等；
+- 分布式系统的网络问题；
+- bugs。
+
+异常打乱正常代码逻辑。遇到异常时：
+- 继续前进完成工作；
+- 放弃，因为异常可能发生在系统状态不一致。
+
+
+**异常处理代码为更多异常创造了机会**。
+
+很难保证处理异常的代码真正工作。因为测试环境很难重现异常，异常处理代码就很难执行。
+
+### 太多异常
+
+防卫过度代码。
+
+类抛出的异常也是其接口的一部分；拥有许多异常的类比较少异常更浅。
+
+### Define errors out of existence
+
+定义 `API` 没有异常需要处理。
+
+### Mask Exception
+
+检测到异常情况并在系统中以较低级别对其进行处理，因此更高级别的软件无需了解该情况。
+
