--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -242,3 +242,34 @@ GC 算法：
 写屏障缺点：
 - 开销：每次对引用更行都会有开销；
 - 伪共享：都是以缓存行的方式。多线程修改相互独立变量但是这些变量在一个缓存行中产生。解决：**只有检查没有被标记过时才将其标记变脏**。
+
+#### 并发的可达行分析
+
+`GC Roots` 再继续往下遍历对象图，这一段时间与堆容量正比。
+
+三色标记法：
+
+- 白色：尚未被垃圾回收器访问过；
+- 黑色：已经被访问，且这个对象所有引用被扫描过；
+    - 黑色不可直接指向白色；
+- 灰色：已经被访问，但对象上至少存在一个引用还没被扫描过。
+
+**对象消失**：在标记时并发修改了引用关系。
+
+产生的原因（两个条件同时满足）：
+
+- 赋值器**插入**一条或多条从**黑色 -> 白色**的**新引用**；
+- 赋值器**删除**  **全部灰色 -> 白色** 的**直接引用或间接引用**。
+
+只需破坏一个即可，方法如下：
+
+- 增量更新：破坏第一个条件。（`CMS`）
+    - 当**黑色对象插入新的指向白色对象的引用关系**时，将**新插入的引用记录**；
+    - **并发扫描结束**，将**记录的黑色对象为跟，再扫描一次**；
+    - **相当于黑色对象插入了指向白色对象之后 -> 灰色对象**。
+- 原始快照：破坏第二个条件。（`G1`, `Shenandoah`）
+    - 记录下删除的引用；
+    - 并发结束之后，再将灰色为根，重新标记；
+    - **无论引用关系是否删除，都会按照刚开始扫描那一刻的对象图进行搜索**。
+
+> 都是通过**写屏障**实现。
