--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -117,9 +117,9 @@ categories: Java
 ### 引用类型
 
 - 强：引用复制 `xxx = new XXX()`
-- 软：**还有用，但非必须**。系统**将要发生内存溢出异常前**，**列进回收范围**之中进行**第二次回收**。
-- 弱：**非必须对象**。只能生产难道下一次垃圾收集发生为止。无论内存是否够用。
-- 虚：不会对其生存时间构成影响，也无法通过其来获取对象的实例。目的：在对象被回收前收到一个系统通知。
+- 软(SoftReference)：**还有用，但非必须**。系统**将要发生内存溢出异常前**，**列进回收范围**之中进行**第二次回收**。
+- 弱(WeakReference)：**非必须对象**。只能生存到下一次垃圾收集发生为止。无论内存是否够用。
+- 虚(PhantomReference)：不会对其生存时间构成影响，也无法通过其来获取对象的实例。目的：在对象被回收前收到一个系统通知。
 
 ### finalize() 自救
 
