--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -273,3 +273,10 @@ GC 算法：
     - **无论引用关系是否删除，都会按照刚开始扫描那一刻的对象图进行搜索**。
 
 > 都是通过**写屏障**实现。
+
+### 经典垃圾回收器
+
+**经典** 是与 `JDK 11` 发布的高性能低延迟分开。
+
+
+![3-6]({{ site.url }}/assets/imgs/jvm/jvm-3-6.png)
