--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -355,3 +355,133 @@ Position findNext(Position start, String string);
 
 检测到异常情况并在系统中以较低级别对其进行处理，因此更高级别的软件无需了解该情况。
 
+在适合的地方使用时，其深化了 `class`，因为它减少了类的接口增加了功能性。
+
+> 异常在低层方法处理。
+
+### 异常聚合
+
+在同一个地方处理多个方法抛出的多个异常。
+
+> 异常在高层方法处理。
+
+考虑异常聚合的一种方法是，它用可以处理多种情况的单个通用机制替换了几种针对特定情况而量身定制的特殊用途的机制。
+
+---
+
+## Design it Twice
+
+当进行重大设计决策的时候考虑多个选项可能会更好。
+
+比如设计一个 `GUI 文本编辑器` 操作文本文件：
+
+- 面向行接口；
+- 面向单个字符接口；
+- 面向字符串接口。
+
+> 尝试选择截然不同的方法，将学得更多。尽管确信只有一种合适的方法，还是考虑第二种设计。
+
+> 在对备选方案进行粗略设计之后，**列出每个方案的优缺点**。
+
+> 接口最重要的考量是上层软件对其的易用性。
+
+- 接口是否更简单？
+- 更具通用性？
+- 更高效？
+
+---
+
+## 为什么要写注释？
+
+## 注释应该秒数那些在代码中不明显的东西
+
+注释最重要的原因是**抽象**：包含了太多在代码中不明显的信息。注释能提供一个简单的、高层的视图。
+
+> 好的注释在代码不同层级的细节上解释事情。
+
+### 选择约定
+
+各个语言各种格式。
+
+### 不要重复代码
+
+许多注释没有啥用。最常见的原因是：**注释在重复代码**。
+
+增加一条注释应该自问：**没看过代码的人只通过看代码就能写出注释？**
+
+还有原因是：**将被注释的实体的名字复制到注释中**。
+
+写好注释：
+
+- 注释中的名字与被描述的实体的名字不同；
+- 注释通过提供不同详细程度的信息来增强代码；
+    - 一些注释提供比代码层更低级、更加详细的，增加了**精度**；
+        - 变量声明：比如类实例变量，方法参数，返回值：
+            - 变量的单位；
+            - 边界是否包含；
+            - null 是否允许，null 的意义？
+            - 变量指向的资源必须被释放。谁负责？
+            - 有什么不变的属性。
+        > 变量时，着重这个变量的表示，而不是如何操纵它。
+    - 一些注释提供比代码层更高级、更抽象的，提供了**意图**：代码背后的原因，或者更抽象的方式思考代码；
+        - 用于方法内和接口：
+        - 不应包含细节，应该在高层描述代码，读者能够解释代码中几乎所有的事；
+        - 三省吾身：
+            - 这段代码是干嘛的？
+            - 最简单的事来解释这段代码所有的事?
+            - 这段代码最重要的事？
+    - 同层级的注释没啥用;
+- **使用名词**而不是动词
+
+### 接口文档
+
+注释最重要的角色是**定义抽象**。
+
+> 抽象是实体的简化，保留了必要信息，省略了可以安全忽略的细节。
+
+代码不适合描述抽象，太低层次包含了不应被抽象看到的实现细节。
+
+
+- 将接口注释与实现注释分开；
+    - 接口注释：使用类和方法的必要信息，抽象的定义；
+    - 实现注释：为了实现抽象，类和方法内部如何工作。
+
+方法的接口注释包含了 `higher-level` 和 `lower-level`：
+
+- 开始一两句描述调用者认为的方法行为(`higher`)；
+- 描述参数和方法，必须非常精准，同时也要描述约束和依赖；
+- 描述边际效应：影响未来系统的操作而不是结果的一部分；
+- 描述抛出的异常；
+- 描述方法调用必须满足的前置条件。
+
+### 实现注释： what, why, not how
+
+主要的目标是帮助读者明白**代码在做什么**。
+
+---
+
+## 选择名字
+
+### 创建图像
+
+当选择一个名字，目标是在读者闹钟创建一个名字后面本质的图像。
+
+名字是一种抽象：它们提供了一种简单的方式来思考背后复杂的实体。
+
+最好的名字是那些专注于实体重要的而忽略次要的细节。
+
+### 名字应该精准
+
+精准，一致性。
+
+一致性减少了认知负担。
+
+- 给定用途时总是使用常用名字；
+- 非给定用途不要使用常用名字；
+- 用途足够窄，所有的名字有相同的行为。
+
+> 变量的声明与用的地方越远，名字应该越长。
+
+---
+
+## 先写注释
