--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -97,6 +97,8 @@ categories: Java
 - 句柄：开出一块内存：句柄池，句柄包括：到对象**实例数据**的指针，到对象**类型数据**的指针。`reference` 存放的时对象的句柄地址。
 - 直接指针：`reference`存放的时对象的直接地址。需要考**虑如何放置访问类型数据的相关信息**。
 
+---
+
 ## 垃圾收集器 & 内存回收策略
 
 ### 可达性分析
@@ -280,3 +282,83 @@ GC 算法：
 
 
 ![3-6]({{ site.url }}/assets/imgs/jvm/jvm-3-6.png)
+
+上面连线表示可以搭配使用
+
+#### Serial(Mark-Copy)
+
+**单线程**工作的收集器。单线程是指在进行 `GC` 时，必须**暂停其他所有工作的线程**（`Stop The World`），直到收集结束。
+
+![3-7]({{ site.url }}/assets/imgs/jvm/jvm-3-7.png)
+
+- 缺点：
+    - 慢
+- 优点：
+    - 额外内存消耗（`Memory Footprint`）最小；
+    - 对于核心数少的环境，**没有线程交互的开销**，可以获得最高的单线程收集效率。
+
+> 在**客户端**模式下不错。
+
+#### ParNew(Mark-Copy)
+
+上面的并行版本，除了同时使用多条线程 `GC`，没啥区别。
+
+`JDK 7` 之前，**服务端**首选。
+
+![3-8]({{ site.url }}/assets/imgs/jvm/jvm-3-8.png)
+
+成功的原因是 `CMS` 收集老年代不能与 `Parallel Scavenge` 合作。它是唯一能与 `CMS` 配合工作的。随着 `CMS` 兴起而兴起。
+
+默认开启的**收集线程数**与**处理核心数**相同。
+
+**GC 中并发与并行的区别**：
+
+> Parallel: **并行**是**多条垃圾收集器线程**之间的关系，**同一时间多条线程协同工作**，通常**默认用户线程处于等待**。
+
+> Concurrent: **并发**是**垃圾回收器线程**与**用户线程**之间的关系，**同一时间垃圾回收器线程与用户线程都在运行**。
+
+#### Parallel Scavenge(Mark-Copy)
+
+同样是 `标记-复制` 算法。目标是**达到一个可控制的吞吐量**。 `CMS` **尽可能地缩短垃圾收集时用户线程停顿的时间**。
+
+```
+吞吐量 = 运行用户代码时间 / (运行用户代码时间 + 运行垃圾收集时间)
+```
+
+- -XX:MaxGCPauseMillis，最大停顿时间，设置越小，次数越多；
+- -XX:GCTimeRatio，直接设置吞吐量大小，假设 `19`，则 `1/(1 + 19)`，垃圾回收时间占 `5%`。
+- -XX:UseAdaptiveSizePolicy，不需要人工指定 `-Xmn`, `-XX:SurvivorRatio`, `-XX:PretenureSizeThreshold`
+
+#### Serial Old(Mark-Compact)
+
+![3-6]({{ site.url }}/assets/imgs/jvm/jvm-3-6.png)
+
+- 客户端模式使用；
+- `CMS` 失败后的后备方案。
+
+#### Parallel Old(Mark-Compact)
+
+`Parallel Scavenge` 老年代版本。
+
+![3-10]({{ site.url }}/assets/imgs/jvm/jvm-3-10.png)
+
+在注重吞吐量或资源稀缺时，优先考虑 `Parallel Scavenge` + `Parallel Old`。
+
+
+#### CMS(Mark-Sweep)
+
+- 初始标记(initial mark `STW`)
+- 并发标记(concurrent mark)
+- 重新标记(remark `STW`)
+- 并发清除(concurrent sweep)
+
+![3-11]({{ site.url }}/assets/imgs/jvm/jvm-3-11.png)
+
+缺点：
+
+- 处理器资源非常敏感；
+    - 面向并发设计的都对其敏感；
+    - 占用一部分线程，导致应用程序变慢；
+- 无法处理“浮动垃圾”，可能出现 `Concurrent Mode Failure` 失败导致另一次完全 `STW` 的 `Full GC`；
+    - 浮动垃圾：在并发标记、并发清除阶段产生的垃圾；
+    - 由于有浮动垃圾，所以**不能等老年代几乎被填满再收集**，**必须留一部分空间**共并发收集时程序运行使用(会产生新的对象)；
