--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -229,7 +229,7 @@ GC 算法：
 记录精度：
 - 字长精度：一个 `Word` 是否包含？
 - 对象精度：一个对象里有字段包含？
-- 卡精度（卡表，是上面 `ADT` 的实现）：精确到一个内存区域，该区域是否包含？
+- 卡精度（**卡表**，是上面 `ADT` 的实现）：精确到一个内存区域，该区域是否包含？
     - 以字节数组的形式。数组中每个元素对应标识的内存区域中一块**特定大小的内存块**（卡页：2^N）。
 
 #### 写屏障
@@ -361,4 +361,44 @@ GC 算法：
     - 占用一部分线程，导致应用程序变慢；
 - 无法处理“浮动垃圾”，可能出现 `Concurrent Mode Failure` 失败导致另一次完全 `STW` 的 `Full GC`；
     - 浮动垃圾：在并发标记、并发清除阶段产生的垃圾；
-    - 由于有浮动垃圾，所以**不能等老年代几乎被填满再收集**，**必须留一部分空间**共并发收集时程序运行使用(会产生新的对象)；
+    - 由于有浮动垃圾，所以**不能等老年代几乎被填满再收集**，**必须留一部分空间**供并发收集时程序运行使用(会产生新的对象)；
+    - 当预留的空间无法满足分配新对象的需要，就会**并发失败**（`Concurrent Mode Failure`）。冻结用户线程的执行，临时使用 `Serial Old` 重新进行老年代的垃圾收集；
+    - `Mark-Compact` 回产生大量的空间碎片，提前触发 `Full GC`。
+        - -XX:+UseCMSCompactAtFullCollection `Full GC` 开启碎片整合；
+        - -XX:CMSFullGCsBeforeCompaction 在执行 `cms` 若干次不整理空间的 `Full GC` 进行 `Full GC`。
+
+#### G1
+
+**面向局部收集** + 基于 `Region` 的内存布局形式。
+
+> 面向堆内存任何部分来组成**回收集**（`Collection Set`），衡量标准**不再是分代**，而是**哪块内存存放的垃圾数量最多，回收收益最大**。
+
+> Mixed GC
+
+- **仍遵从分代**收集；
+- 把 `Java 堆` 划分为多个**大小相等的独立区域**（`Region`），每个区域根据需求，扮演 `Eden`、`Survivor` 或 `老年代`。能对扮演**不同角色的 `Region` 使用不同策略**；
+- `Humoongous` 区域存放**大对象**： **> 0.5 Region 大小的对象**。**> 1 Region 大小的对象** 用多个连续 `Humoongous` 存放；
+    - 大多数行为将 `Humoongous` 当作老年代看待。
+- `-XX:G1HeapRegionSize` 设置 `Region` 大小， `1MB ~ 32MB`， `2^N`；
+- 建立了**可预测的停顿时间模型**，是因为每次回收都是 `Region` 的整数倍；
+    - 跟踪各个 `Region` 的**价值**：**回收获得的空间大小以及回收所需时间的经验值**；
+    - 放在**优先队列**中；
+    - `-XX:MaxGCPauseMillis` 设置的允许收集停顿时间来优先处理回收效益最大的 `Region`。
+
+挑战：
+- `Region` 中 `跨 Region` 引用对象怎么解决？
+    - 使用**记忆集**，每个 `Region` 维护自己的**记忆集**
+        - 记忆集**记录别的 Region 指向自己的指针**，并标记这些指针在哪些卡也的范围之内；
+        - 本质上是 **哈希表**：`key` 别的 `Region` 的其实地址，`Value` 是一个集合，存卡表的索引号；
+        - 双向索引，我 <-> 谁：`卡表`：我 -> 谁；
+        - 占用额外的 `10 - 20` 内存。
+
+- 并发标记阶段 `收集线程`、`用户线程` 互不干扰？
+    - 原始快照（`STAB`）；
+    - 每个 `Region` 设计两个 `TAMS` 指针，`Region` 中一部分空间划分出来用于**并发回收过程中的新对象回收**。**并发回收时新分配的对象地址必须在这两个指针位置上**，这个地址以上默认存活，不纳入回收范围；
+
+- 如何建立可靠的停顿预测模型 `-XX:MaxGCPauseMillis`？
+    - 衰减均值；
+    - 记录每个 `Region` 回收耗时、`Region`记忆集里的脏卡数量等各个步骤的成本，得出平均值，标准偏差，置信度等；
+    - 通过观察的值预测现在开始回收，哪些 `Region` 组成的**回收集**可以不超过期望的时间获得最高收益。
+
