--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -371,6 +371,9 @@ GC 算法：
 
 **面向局部收集** + 基于 `Region` 的内存布局形式。
 
+![3-13]({{ site.url }}/assets/imgs/jvm/jvm-3-13.jpg)
+
+
 > 面向堆内存任何部分来组成**回收集**（`Collection Set`），衡量标准**不再是分代**，而是**哪块内存存放的垃圾数量最多，回收收益最大**。
 
 > Mixed GC
@@ -402,3 +405,32 @@ GC 算法：
     - 记录每个 `Region` 回收耗时、`Region`记忆集里的脏卡数量等各个步骤的成本，得出平均值，标准偏差，置信度等；
     - 通过观察的值预测现在开始回收，哪些 `Region` 组成的**回收集**可以不超过期望的时间获得最高收益。
 
+运作过程：
+
+- 初始标记：
+    - 标记 `GC Roots` 直接关联到的对象；
+    - 修改 `TAMS` 指针的值，**下一阶段用户线程并发运行能正确地在可用的 `Region` 中分配新对象**；
+    - STW，很短。`Minor GC` 时同步进行。
+- 并发标记：
+    - 对堆中对象进行可达性分析，递归扫描整个堆的对象图，找出要回收的对象；
+    - 扫描完成后，还要重新处理 `STAB` 记录下的在**并发时有引用变动的对象**。
+- 最终标记：
+    - 并发阶段结束后，遗留下来的最后少量的 `STAB` 记录；
+    - STW 很短。
+- 筛选回收：
+    - 更新 `Region` 的统计数据，排序价值，制定回收计划；
+    - 把决定回收的那一部分 `Region` 的存活对象复制到空的 `Region`，回收旧 `Region` 全部空间；
+    - `STW` 多线程。
+
+> 追求能够应付应用的**内存分配速率**，而不是一次清理整个堆。
+
+不会产生碎片的原因：
+- 整体上是 `Mark-Compact`；
+- 局部上是 `Mark-Copy`。
+
+缺点：
+
+- 内存占用(`Footprint`)和额外内存负载(`Overload`) 高；
+- 记忆集每个 `Region` 维护一份，占整个堆容量的 `20%+`；
+- 写后屏障维护卡表，写前屏障跟踪并发的指针变化。写屏障消耗资源；
+    - 写前、写后要做的事情放到队列里 ，异步执行。
