--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -434,3 +434,70 @@ GC 算法：
 - 记忆集每个 `Region` 维护一份，占整个堆容量的 `20%+`；
 - 写后屏障维护卡表，写前屏障跟踪并发的指针变化。写屏障消耗资源；
     - 写前、写后要做的事情放到队列里 ，异步执行。
+
+### 垃圾回收日志
+
+
+类型 | Prior JDK 9 | JDK 9
+---------|----------|---------
+ 基本信息 | `-XX:+PrintGC` | `-Xlog:gc`
+ 详细信息 | `-XX:+PrintGCDetails` | `-Xlog:gc*`
+ 堆、方法区可用容量变化 | `-XX:+PrintHeapAtGC` | `-Xlog:gc+heap=debug`
+ 用户线程并发、停顿时间 | `-XX:+PrintGCApplication[Concurrent|Stopped]Time` | `-Xlog:safepoint`
+ 剩余对象的年龄分布情况 | `-XX:+PrintTenuringDistribution` | `-Xlog:gc+age=trace`
+
+
+### 内存分配与回收策略
+
+> 内存分配，概念上都在堆上，实际也有可能被拆散为标量类型间接在栈上。
+
+> 新生对象通常会分配在新生代，少数情况（对象大小超过一定阈值）直接分配在老年代。
+
+#### 对象优先 Eden
+
+当 `Eden` 没有足够空间进行分配，发起 `Minor GC`。
+
+#### 大对象直接进老年代
+
+`-XX:PretenureSizeThreshold` 只针对 `Serial`，`ParNew`。
+
+#### 长期存活对象将进入老年代
+
+`-XX:MaxTenuringThreshold`
+
+如果 `Survivor` 相同年龄所有对象大小的总和 > `Survivor` 的一半，年龄 >= 该年龄的直接进老年代。
+
+#### 空间分配担保
+
+
+{% comment %} 
+```plantuml
+@startuml
+start
+:准备 Minor GC;
+if (老年代最大连续空间 > 新生代所有对象的总空间?) then (yes)
+    :Minor GC;
+    stop
+else (no)
+    if (-XX:HandlePromotionFailure 开启?) then (yes)
+        if (老年代最大连续空间 > 历次今生到老年代对象的平均大小?) then (yes)
+            :Minor GC;
+            stop
+        else (no)
+            :Full GC;
+            stop
+        endif
+    else (no)
+        :Full GC;
+        stop
+    endif
+endif
+@enduml
+```
+{% endcomment %}
+
+担保就是老年代进行分配担保，把 `Survivor` 无法容纳的对象直接送入老年代。
+
+前提是老年代有空间容纳存活下来的对象。
+
+取平均值有点赌博，如果担保失败，则进行 `Full GC`。
