--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -501,3 +501,49 @@ endif
 前提是老年代有空间容纳存活下来的对象。
 
 取平均值有点赌博，如果担保失败，则进行 `Full GC`。
+
+---
+
+## 虚拟机性能监控、故障处理工具
+
+### jps 进程状况
+
+`jps vmid -l -v`：v 是启动时 `jvm` 参数。
+
+### jstat 统计信息
+
+**类加载**、**内存**、**垃圾收集**、**即时编译**等运行时数据。
+
+`jstat option vmid interval count`
+
+```
+-gcutil 空间占比
+-gc     堆状况
+```
+
+### jinfo 配置信息
+
+`jinfo -flag XXX pid` 查看参数的值。
+
+`jinfo -sysprops` 查看 `System.getProperties()`。 
+
+### jmap 内存映射
+
+生成**堆转储快照**（`heapdump`）。
+
+生成手段：
+
+- -XX:+HeapDumpOnOutOfMemoryError 内存溢出异常自动生成；
+- -XX:+HeapDumpOnCtrlBreak `ctrl + break` 生成，或 `kill -3`；
+- `jmap -dump:format=b,file=xxx.bin pid`。
+
+`jmap -dump vmid` 堆详细信息。
+
+### jhat 堆转储快照分析
+
+`jhat XXX.bin` 后打开 `localhost:7000`。
+
+### jstack 堆栈跟踪
+
+`jstack -lm pid` 堆栈和锁的附加信息。
+
