--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -547,3 +547,108 @@ endif
 
 `jstack -lm pid` 堆栈和锁的附加信息。
 
+---
+
+## 类加载机制
+
+`Class` 文件加**载到内存**，对数据进行**校验**、**转换解析**和**初始化**，最终形成可以被使用的**Java 类型**。
+
+类型的**加载**、**连接**、**初始化**都是在**运行期间**完成。
+
+**动态扩展**的特性是**依赖运行期动态加载**、和**动态连接**实现的。
+
+![7-1]({{ site.url }}/assets/imgs/jvm/jvm-7-1.png)
+
+**初始化**的时机（都是如果没有初始化就需要初始化）：
+
+**有且只有**：
+- `new`、`getstatic`、`putstatic`、`invokestatic`:
+    - 使用 `new` 实例化数据；
+    - **读取**或**设置**类型的**静态字段**（被 `final` 在编译期把结果放入常量池）；
+    - **调用类型的静态方法**。
+- 使用 `reflect` 进行**反射调用**；
+- 类在初始化时，发现其**父类还没有进行初始化**；
+- 虚拟机启动，执行用户指定的主类，会初始化这个类；
+- `MethodHandle`方法句柄；
+- 默认方法执行。
+
+> 上述称为对一个类型进行**主动引用**。其他所有的称为**被动引用**，都不会触发初始化。
+
+被动引用 **e.g.**：
+
+- 子类引用父类静态变量；
+- 新建数组，比如 `new SuperClass[10]`，其实是 `[XXX.SuperClass` 自动生成的，直接继承于 `Object` 的子类，创建动作由 `newarray` 触发；
+- `static final` 字段的引用，因为其在常量池中。
+
+### 类加载过程
+
+#### 加载
+
+- 通过一个类的**全限定名**来获取类的**二进制字节流**；
+- **字节流**代表的**静态存储结构**转化为**方法区的运行时数据结构**；
+- 内存中生成代表这个类的 `Class` 对象，作为**方法区**这个类的各种数据的**访问入口**。
+
+**数组不通过类加载器创建**，由 `VM` 直接在内存中动态构造出来的。数组类的**元素类型**最终还是要靠**类的加载器**来完成加载。
+- 如果组件类型是**引用类型**，这个数组被标识在**组件类型的类加载器的类名称空间上**；
+- 如果组件类型不是，就标记为**引导类加载器相关**。
+
+加载完后，
+- **二进制字节流**存储在**方法区**；
+- 在**堆内存**实例化一个**Class 类的对象**，作为程序访问方法区中的类型数据的外部接口；
+- 加载与连接阶段的部分动作是**交叉进行**。
+
+#### 验证
+
+**文件格式**、**元数据**、**字节码**、**符号引用**。
+
+符号引用转化为直接引用。
+
+
+#### 准备
+
+类中定义的变量（`static`）**分配内存**并设置**类变量初始值**。
+
+**类变量内存**都在**方法区**（**方法区是逻辑上的分区**）中**分配**。`Java 8` 及之后，类变量随着 `Class 对象` 一起存放在 `Java 堆` 中。
+
+类变量的赋值动作 `putstatic` 指令程序编译后，在类构造器 `<cinit>()` 中。
+
+`static final` 这类 `ConstantValue` 准备阶段会是赋值后的值。
+
+#### 解析
+
+**常量池内的符号引用**替换为**直接引用**的过程。
+
+- **符号引用**：以一组符号来描述所引用的目标；
+- **直接引用**：**直接指向目标的指针**、**相对偏移量**或者是一个能**间接定位到目标的句柄**。
+
+##### 类或接口解析
+
+`D`：代码所处的类，`N`：未解析过的符号引用，`C`：解析为的直接引用。
+
+- `C` 不是数组，则把 `N` 传给 `D` 的类加载其加载这个类；
+- `C` 是数组，数组类型是对象，`N` 则是 `[Ljava/lang/Integer` , 则需要加载 `Integer`；
+- 上面没有问题则生成类有效的类或接口。
+
+##### 字段解析
+
+##### 方法解析
+
+##### 接口方法解析
+
+
+#### 初始化
+
+初始化类变量和其他资源：执行 `<clinit>()`：
+
+- `<cinit>()` 自动收集**所有的**`类变量的赋值动作` + `静态语句块中的语句`；
+- 与构造函数不同，不需要显示的调用父构造器，保证子类的 `<cinit>()` 调用前，父类的被调用；
+- `<cinit>()` 对于接口来说不是必须；
+- `<cinit>()` 多线程正确加锁同步。
+
+### 类加载器
+
+**每一个类加载器都有独立的命名空间**。
+
+#### 双亲委派模型
+
+![7-2]({{ site.url }}/assets/imgs/jvm/jvm-7-2.png)
