--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -652,3 +652,17 @@ endif
 #### 双亲委派模型
 
 ![7-2]({{ site.url }}/assets/imgs/jvm/jvm-7-2.png)
+
+- Bootstrap: `<JAVA_HOME>/lib` 或 `-Xbootclasspath` 并且是名字能被识别的：`rt.jar`、`tools.jar`；
+- Extension: `<JAVA_HOME>/lib\ext`；
+- Application: `getSystemClassLoader()` 的返回值，加载**用户路径**。
+
+> 使用**组合**的形式。
+
+#### 破坏双亲委派机制
+
+- 新加了 `protected findClass()`，如果父类加载失败，自动调用自己的 `findClass()` 方法完成；
+- `JNDI 服务`：对资源进行查找和集中管理，调用由其他厂商实现并部署在 `ClassPath` 下的 **JNDI 服务提供者接口的代码**。
+    - 使用 **线程上下文类加载器**，`Thread.setContextClassLoader()` 进行设置，未设置则从父线程中继承，全局都没设置则是 **AppClassLoader**。
+- **Hot Swap**、**Hot Depolyment**：
+    - `OSGI`
