--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -666,3 +666,44 @@ endif
     - 使用 **线程上下文类加载器**，`Thread.setContextClassLoader()` 进行设置，未设置则从父线程中继承，全局都没设置则是 **AppClassLoader**。
 - **Hot Swap**、**Hot Depolyment**：
     - `OSGI`
+
+---
+
+## 虚拟机字节码执行引擎
+
+### 运行时栈帧结构
+- **方法**作为最基本的执行单元；
+- **栈帧**则是**方法调用**和**方法执行**背后的数据结构，是**虚拟机栈**的栈元素；
+    - 局部变量表；
+    - 操作数栈；
+    - 动态连接；
+    - 方法返回地址。
+
+#### 局部变量表
+
+存放**方法参数**和**方法内部定义的局部变量**。
+
+容量以**变量槽**为最小单位。
+
+使用**索引定位**的方式使用**局部变量表**。
+
+当方法调用时，使用**局部变量表**完成**参数值** -> **参数列表** 的传递。如果是实例方法，则 `0` 号为用于传递**方法所属对象实例的引用**。
+
+**变量槽可以重用**。
+
+> 定义的变量，作用域并不一定会覆盖整个方法，如果超过变量作用域，则变量槽交给其他变量重用。
+
+#### 操作数栈
+
+方法的执行过程中，各种字节码指令往操作数栈写入和提出内容。
+
+> 可以和**局部变量表**共享区域。
+
+#### 动态连接
+
+指向运行时常量池该栈帧所属方法的引用，用于**动态连接**。
+符号引用转为直接引用：
+- 静态解析：类加载或第一次运行期间；
+- 动态解析：每一次运行期间都转化。
+
+#### 方法返回地址
