--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -707,3 +707,50 @@ endif
 - 动态解析：每一次运行期间都转化。
 
 #### 方法返回地址
+
+- 正常返回完成：任意一个方法返回的字节码指令；
+    - 主调方法的 `PC 计数器` 的值作为返回地址；
+    - 栈帧中可能保存这个地址。
+- 异常调用完成：异常，且没在方法体内妥善处理。
+    - 异常处理表；
+    - 栈帧中一般不存。
+
+必须返回到最初方法被调用的位置，方法返回时在**栈帧**中保存一些信息，帮助恢复它的上册主调方法的执行状态。
+
+方法退出执行的操作：
+- 恢复上层方法的局部变量表和操作数栈；
+- 返回值压入调用者栈帧的操作数栈中；
+- `PC 计数器` 值只想方法调用指令后面的一条指令。
+
+### 方法调用
+
+**并不是方法中的代码被执行**。**确定被调用方法的版本**。
+
+一切方法调用在 `Class 文件` 里存储的都是**符号引用**，~~不是方法实际运行时内存布局中的入口地址（直接引用）~~。
+
+#### 解析
+
+将一部分**符号引用 -> 直接引用**。
+- 在程序**运行之前**有一个**可确定的调用版本**；
+- 在运行期间不可变。
+> **调用目标**在**编译**那一刻就已经**确定**。
+
+**编译期可知，运行期不可变**：
+- 静态方法；
+- 私有方法。
+
+> 因为不能通过继承或别的方式重写出其他版本。
+
+> `invokestatic` 和 `invokespecial`。**静态**、**私用**、**实例构造器**、**父类**、**final 修饰**。
+
+支持的调用方法字节码：
+- invokestatic;
+- invokespecial；
+    - `<init>()`；
+    - 私有；
+    - 父类中的方法。
+- invokevirtual: 虚方法；
+- invokeinterface: 接口方法，运行时再确定实现该接口的对象；
+- invokedynamic: **运行时****动态解析**出**调用点限定符所引用的方法**，再执行。
+
+#### 分派
