--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -754,3 +754,58 @@ endif
 - invokedynamic: **运行时****动态解析**出**调用点限定符所引用的方法**，再执行。
 
 #### 分派
+
+**静态分派（重载 Overload）**
+
+```Java
+abstract class Human {
+
+}
+
+class Man extends Human {
+
+}
+
+class Woman extends Human {
+
+}
+
+Human man = new Man();
+```
+
+最后一句：`Human` 是**静态类型**，`Man` 是**运行时/实际类型**。
+
+- **静态类型**的变化**仅仅在使用时发生**，变量本身的**静态类型不会被改变**，**最终的静态类型在编译期可知**；
+- **实际类型**：变化的结果在**运行时才可确定**，编译时并不知道实际类型。
+
+使用哪个**重载**版本，**完全**取决于**传入参数的数量和类型**。\
+
+> 静态分派：类似上面所有依赖静态类型决定发放执行的分派。
+
+**动态分派（重写 Override）**
+
+`invokevirtual` 过程：
+- 找到操作数栈顶的第一个元素所指向的对象的对象的**实际类型**；
+- 在类型中找到**描述符**和**简单名称**都相符的方法，通过则返回直接引用；
+- 否则，按继承关系，从下往上进行上一步；
+- 没找到，则抛 `AbstractMethodError`。
+
+**单分派、多分派**
+
+方法宗量：方法的**接收者**与方法的**参数**的统称。
+
+编译阶段（静态分派）：
+- 方法的接收者；
+- 方法的参数。
+
+> **静态分派**属于**多分派**。
+
+运行阶段（动态分派）：
+- 方法接收者
+
+> **动态分派**属于**单分派**。
+
+
+虚方法表：存各个方法的实际入口地址。在类加载、连接阶段初始化。
+
+### 动态语言支持
