--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -654,7 +654,7 @@ endif
 ![7-2]({{ site.url }}/assets/imgs/jvm/jvm-7-2.png)
 
 - Bootstrap: `<JAVA_HOME>/lib` 或 `-Xbootclasspath` 并且是名字能被识别的：`rt.jar`、`tools.jar`；
-- Extension: `<JAVA_HOME>/lib\ext`；
+- Extension: `<JAVA_HOME>/lib/ext (<JAVA_HOME>/jre/lib/ext)`；
 - Application: `getSystemClassLoader()` 的返回值，加载**用户路径**。
 
 > 使用**组合**的形式。
