--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -809,3 +809,58 @@ Human man = new Man();
 虚方法表：存各个方法的实际入口地址。在类加载、连接阶段初始化。
 
 ### 动态语言支持
+
+### 基于栈的字节码解释执行引擎
+
+- 词法分析；
+- 语法分析；
+- 源码转为**抽象语法树**。
+
+基于**栈的指令集架构**。，指令大多数时零地址指令，依赖**操作数栈**工作。
+
+优点：
+
+- 可移植性；
+- 代码相对紧凑；
+- 编译器实现更简单。
+
+缺点：
+
+- 完成相同功能所需相对指令更多，因为入栈、出栈本身产生大量指令；
+- 栈在内存，频繁的栈访问就是频繁的内存访问。
+    - 常用的操作映射到寄存器，避免内存访问。
+
+---
+
+## Java 内存模型与线程
+
+高速缓存与**缓存一致性**。
+
+**内存模型**：特定的操作协议下，对特定的**内存**或**高速缓存**进行**读写访问的过程抽象**。
+
+**乱序执行**：处理器对输入代码**乱序执行**优化，然后将**结果重组**，保证结果与顺序执行的结果一致。
+
+> `JIT` 也有。
+
+### Java 内存模型
+
+定义程序中各种变量的访问规则。变量：
+- 实例字段；
+- 静态字段；
+- 构成数组对象的元素。
+- ~~局部变量~~
+- ~~方法参数~~
+
+#### 主内存与工作内存
+
+- **所有变量**都存储**在主存**；
+- **每条线程**有**自己的工作内存**；
+    - 该**线程使用的变量的主内存副本**；
+        - 大对象的话，对象的引用，对象中某个在线程访问的字段是有可能被复制的。
+    - 线程对**对象的所有操作**必须在**工作内存**中进行；
+    - ~~不能直接写主存数据~~；
+- 不同的线程无法直接访问对方工作内存中的变量；
+    - 线程间变量值的传递需要通过主存完成。
+
+- **主存**对应物理上**虚拟机内存**的一部分，物理**硬件的内存**；
+- **工作内存**对应**虚拟机栈**中部分区域，**优先**存储于**寄存器**和**高速缓存**中。
