--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -832,6 +832,28 @@ Human man = new Man();
 
 ---
 
+## 类加载及执行子系统
+
+`Web 服务器` 面临的问题：
+
+- 同一服务器上两个 `Web 应用程序` 使用的 `Java 类库` 相互隔离；
+- `Java 类库` 可以共享（与上面相反）；
+- 自身安全不受 `Web 应用程序` 的影响，**服务器使用的类库**与**应用程序的类库**`互相独立`；
+- `JSP` 能 `HotSwap`。
+
+> 一个 `ClassPath` 不够，所以都提供了好几个有着不同含义的 `ClassPath` 路径共用户存第三方库。
+
+![9-1]({{ site.url }}/assets/imgs/jvm/jvm-9-1.png)
+
+---
+Common: /common
+Catalina: /server
+Shared: /shared
+---
+
+
+---
+
 ## Java 内存模型与线程
 
 高速缓存与**缓存一致性**。
