--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -845,13 +845,14 @@ Human man = new Man();
 
 ![9-1]({{ site.url }}/assets/imgs/jvm/jvm-9-1.png)
 
----
-Common: /common，`Tomcat` 和所有 `Web 应用程序` 共同使用
-Catalina: /server，`Tomcat` 可用，`Web 应用程序` 不可见
-Shared: /shared，`Tomcat` 和所有 `Web 应用程序` 共同使用，`Tomcat` 不可见
-WebApp: /webApp/WEB-INF，仅对 `该 Web 应用程序` 使用，`Tomcat` 和 `其他 Web 应用程序` 不可见
----
 
+
+类加载器 | ClassPath | 说明
+---------|----------|---------
+ Common | /common | `Tomcat` 和所有 `Web 应用程序` 共同使用
+ Catalina | /server | `Tomcat` 可用，`Web 应用程序` 不可见
+ Shared | /shared | `Tomcat` 和所有 `Web 应用程序` 共同使用，`Tomcat` 不可见
+ WebApp | /webApp/WEB-INF | 仅对 `该 Web 应用程序` 使用，`Tomcat` 和 `其他 Web 应用程序` 不可见
 
 ---
 
