--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -845,14 +845,81 @@ Human man = new Man();
 
 ![9-1]({{ site.url }}/assets/imgs/jvm/jvm-9-1.png)
 
-
-
 类加载器 | ClassPath | 说明
 ---------|----------|---------
  Common | /common | `Tomcat` 和所有 `Web 应用程序` 共同使用
  Catalina | /server | `Tomcat` 可用，`Web 应用程序` 不可见
  Shared | /shared | `Tomcat` 和所有 `Web 应用程序` 共同使用，`Tomcat` 不可见
  WebApp | /webApp/WEB-INF | 仅对 `该 Web 应用程序` 使用，`Tomcat` 和 `其他 Web 应用程序` 不可见
+
+---
+
+## 前端编译与优化
+
+编译期：
+
+编译器 | 内容 | 代表
+---------|----------|---------
+ 前端编译器 | *.java -> *.class | javac; ECJ
+ JIT | 字节码 -> 本地机器码 | HotSpot C1, C2; Graal
+ AOT(静态提前编译器) | 程序 -> 目标机器指令集相关的二进制代码 | Jaotc; GCJ; JET
+
+### Javac
+
+- 准备过程： 初始化插入式注解处理器；
+- 解析和填充符号表:
+    - **词法、语法分析**，源码的字符流 -> 标记集合，构造出**抽象语法树**；
+    - 填充符号表。产生符号地址和符号信息。
+- 插入式注解处理器的处理；
+- 分析与字节码生成过程：
+    - 标注检查：**语法静态信息**进行检查；
+    - 数据流及控制流分析：程序动态运行过程进行检查；
+    - 解语法糖：语法糖还原；
+    - 字节码生成：前面各个步骤转换为字节码。
+
+![10-4]({{ site.url }}/assets/imgs/jvm/jvm-10-4.png)
+
+#### 解析与填充符号表
+
+**语法、词法分析**
+
+字符流 -> `Token` 集合。构造**抽象语法树**。
+
+**填充符号表**
+
+**符号表**：符号地址 + 符号信息。产出一个**待处理列表**。
+
+#### 注解处理器
+
+#### 语义分析与字节码生成
+
+### 语法糖
+
+#### 泛型
+
+**类型擦除**
+
+编译期间将 `ArrayList<Integer>` -> `ArrayList`。只在**元素访问**、**修改**时**自动插入一些强制类型转换和检查指令**。
+
+类型擦除后，插入强制转型没法做了，因为**原始类型**、**Object** 不支持强制转换。那么，就别支持了，都用**包装类**。自动加入**装箱**、**拆箱**。
+
+无法取到**泛型类型信息**。
+
+> 擦除仅仅是对 `Code 属性` 字节码进行擦除，实际**元数据保留了泛型类型**。
+
+#### 自动装箱、拆箱与遍历循环
+
+`Integer.valueOf()` 和 `Integer.intVaue`。
+
+遍历循环：迭代器。
+
+变长参数：数组类型的参数。
+
+> `==` 在**不遇到算术运算**的情况下**不会自动拆箱**以及 `equals()` **不处理数据的类型转换**。
+
+---
+
+## 后端编译与优化
 
 ---
 
@@ -888,3 +955,42 @@ Human man = new Man();
 
 - **主存**对应物理上**虚拟机内存**的一部分，物理**硬件的内存**；
 - **工作内存**对应**虚拟机栈**中部分区域，**优先**存储于**寄存器**和**高速缓存**中。
+
+### Java 与线程
+
+把进程的**资源分配**和**执行调度**分开，**各个线程**可以**共享进程资源**，又可以独立调用。是**处理资源调度**的**最基本单位**。
+
+- 内核线程实现(1:1 **轻量级进程:内核线程**)；
+    - 操作系统内核支持的线程；
+    - 内核完成线程切换；
+    - 操纵**调度器**对线程进行调度，线程任务映射到各个处理器；
+    - 使用的是内核线程的高级接口 **轻量级进程（LWP）**；
+    - 各种线程操作都需要进行**系统调用**，需要在**用户态**和**内核态**来回切换。
+- 用户线程实现(1:N **进程:用户线程**);
+    - 广义：一个线程只要不是**内核线程**都是**用户线程（UT）**;
+    - 狭义：**完全建立在用户空间**的线程库；
+    - 用户线程的操作完全在**用户态**中（创建、销毁、切换和调度。实现复杂）；
+- 用户轻量级进程混合实现(N:M **用户线程:轻量级进程**)。
+    - **用户线程**与**轻量级进程**并存；
+    - **轻量级进程**作为**用户线程**与**内核线程**的桥梁。
+
+> `Java` 使用 **1:1**。
+
+#### 线程调度
+
+- 协同式：线程**执行时间由线程本身**控制。执行完后，主动通知系统切换到另一个线程；
+- 抢占式：**系统分配执行时间**。
+
+#### 线程状态
+
+- New：**创建后尚未启动**；
+- Runnable：Running + Ready；
+- Waiting：无限期等待；
+    - Object::wait()
+    - Thread::join()
+    - LockSupport::park()
+- Timed Waiting：限期等待；
+    - Thread::sleep()
+    - LockSupport::parkNanos/parkUntil()
+- Blocked: 阻塞。等待着获取到一个排他锁；
+- Terminated：已结束运行。
