软件设计哲学

--- a/_posts/2020-04-09-软件设计.md
+++ b/_posts/2020-04-09-软件设计.md
@@ -485,3 +485,163 @@ Position findNext(Position start, String string);
 ---
 
 ## 先写注释
+
+
+### 最先写注释
+
+- 新类，先写类接口注释；
+- 接着，写接口注释以及重要方法签名，但是不写方法体；
+- 知道基本架构感觉 ok；
+- 写类重要实例变量的声明以及注释；
+- 填写方法体，添加实现；
+- 写方法体时，需要增加方法和实例，同时添加注释。
+
+### 注释是设计工具
+
+这样提供了**系统设计**。提供了**完全捕获抽象的唯一方法**，**好的抽象是好的系统设计的基础**。
+
+写好注释，必须**识别变量或者代码的本质**：这个最重要的方面是撒？
+
+注释如同煤矿中的金丝雀。
+
+- 如果注释很长，可能是没有好的抽象；
+- 如果接口方法注释很简单也很短，表明这个方法有简单的接口；
+- 好的注释必须提供调用方法的所有信息并且易懂。
+
+提早写注释，能让注释编写更加有趣。
+
+---
+
+## 修改现有代码
+
+### 保持战略编程
+
+如果你没有使设计更好，你可能在让它变得更坏。
+
+### 保持注释，注释尽量靠近代码
+
+### 注释属于代码，而不是提交记录
+
+当写注释时，问问自己开发者是否将来会使用这些信息。如果需要这些信息，就应当在代码中，而不是需要他们在提交记录中找。
+
+### 避免重复
+
+如果有重复，找一个地方进行注释。其他地方则直接引用第一个地方。
+
+### 检查 diff
+
+提交代码前先检查 diff。
+
+### 高级别的注释更易维护
+
+---
+
+## 一致性
+
+如果系统有一致性，意味着
+- 相似的东西通过相似的方式实现；
+- 减少错误。
+
+一致性的例子：
+
+- 名称；
+- 代码风格；
+- 接口；
+- 设计模式；
+- 不变性。
+
+### 保证一致性
+
+- 文档：创建一个列出最重要的总体约定的文档；
+- 强制：工具强制自动化检查；
+- 入乡随俗：看看已有的代码是咋写的；
+- 不要更改现有规定：抵制“改善”现有公约的冲动。
+
+> 一致性不只是相似的用相似的方式实现，也是不相似的用不同的方式实现。
+
+---
+
+## 代码应该是显而易见的
+
+### 使代码更加明显
+
+- 选择一个好名字；
+- 一致性；
+- 明智使用空白
+
+**方法注释**
+```java
+/**
+ *  @param numThreads
+ *           The number of threads that this manager should spin up in
+ *           order to manage ongoing connections. The MessageManager spins
+ *           up at least one thread for every open connection, so this
+ *           should be at least equal to the number of connections you
+ *           expect to be open at once. This should be a multiple of that
+ *           number if you expect to send a lot of messages in a short
+ *           amount of time.
+ *  @param handler
+ *           Used as a callback in order to handle incoming messages on
+ *           this MessageManager's open connections. See
+ *           {@code MessageHandler} and {@code handleMessage} for details.
+ */
+```
+
+**主要代码块间隔**
+
+```cpp
+//  Round up the length to a multiple of 8 bytes, to ensure alignment.
+uint32_t numBytes32 =  (downCast<uint32_t>(numBytes) + 7) & ~0x7;
+assert(numBytes32 != 0);
+
+// If there is enough memory at firstAvailable, use that. Work down
+// from the top, because this memory is guaranteed to be aligned
+// (memory at the bottom may have been used for variable-size chunks).
+if (availableLength >= numBytes32) {
+    availableLength -= numBytes32;
+    return firstAvailable + availableLength;
+}
+```
+
+**注释**
+
+### 那些使代码不明显
+
+**事务驱动**
+
+很难跟踪控制流。事件处理函数从来不是直接调用，间接的被事务模块调用，一般是函数指针或接口。
+
+**泛型容器**
+
+**违反读者期望的代码**
+
+---
+
+## 软件趋势
+
+### OO 和继承
+
+- 接口继承，父类定义一个或多个方法的签名，但不实现方法；
+- 实现继承，还提供默认方法。
+
+> 程序员需要完全知晓整个类继承才能修改代码，这造就了高复杂性。所以要**谨慎使用**。
+
+> 组合 > 继承
+
+### 敏捷开发
+
+敏捷开发的最重要元素之一是开发应该是**渐进的和迭代的**概念。
+
+增量开发应该是**抽象的**，不是功能的。
+
+### 单元测试
+
+**单元测试**和**系统测试**。
+
+### 测试驱动开发
+
+不好，其聚焦于实现某些功能，而不是找到最好的设计。
+
+### 设计模式
+
+解决特定类型问题的通用方法。
