--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -994,3 +994,97 @@ Human man = new Man();
     - LockSupport::parkNanos/parkUntil()
 - Blocked: 阻塞。等待着获取到一个排他锁；
 - Terminated：已结束运行。
+
+---
+
+## 线程安全与锁优化
+
+线程安全：**多个线程同时访问**一个对象，如果**不用考虑这些线程在运行是环境下调度和交替运行**，也**不需要进行额外的同步**，或者**在调用方进行任何其他的协调操作**，调用这个对象的行为都可以**获得正确的结果**。
+
+> 代码本身丰撞了所有必要的正确性保障手段，令调用者无须关心多线程下的调用问题，更无须自己实现任何措施来保证线程安全。
+
+### 线程安全的实现方法
+
+**互斥同步**：共享数据在同一时刻只被一条（或一些（信号量））线程使用。
+
+- 临界区；
+- 互斥量；
+- 信号量。
+
+> 互斥是因，同步是果。
+
+`synchronized` 是插入 `monitorenter` 和 `monitorexit` 指令。需要一个 `reference` 类型的参数来指明锁对象。
+
+`ReentrantLock` 特点：
+
+- 等待可中断；
+- 公平锁；
+- 锁绑定多个条件。
+
+但还是推荐优先使用 `synchronized`：
+
+- `Java` 语法层面，足够清晰，简单；
+- `Lock` 得确保在 `finally` 释放锁；
+- `synchronized` 已得到优化，未来其也更易优化。
+
+线程**阻塞**和**唤醒**都会带来**性能开销**。**互斥同步**是**悲观**的并发策略。
+
+**非阻塞同步**：可以使用**冲突检测**的**乐观**并发策略，需要硬件支持，**操作**和**冲突检测**得具备**原子性**。
+- 不管风险，先操作，如果没有其他线程争用共享数据，直接成功；
+- 被争用，产生了冲突，再进行其他的补偿措施，**e.g. 不断的重试，直到没有竞争的共享数据为止**。
+
+`CAS` 需要三个操作数：
+
+- 内存位置，变量的内存地址：V；
+- 旧的值：A；
+- 准备设置的新值：B。
+
+### 锁优化
+
+#### 自旋和自适应自旋
+
+让后面请求锁的线程等一会儿，等待需要让线程执行一个**忙循环**（**自旋**）。
+
+自旋默认超过 **10** 次或 `-XX:PreBlockSpin` 没成功则挂起。
+
+**自适应自旋**：由**前一次在同一个锁上的自旋时间**和**锁的拥有者的状态**来决定。
+
+#### 锁消除
+
+对被检测到**不可能存在共享数据竞争的锁**进行**消除**。
+
+基于**逃逸分析**。如果一段代码中，**堆上所有数据不会逃逸**被其他线程访问，可以把它们当**栈上数据**对待，**线程私有**。
+
+#### 锁粗化
+
+如果**一连续操作都对一个对象反复加锁和解锁**，甚至循环体内，频繁进行互斥同步操作会**导致不必要的性能损失**。
+
+**锁同步的范围**扩展（**粗化**）到**整个操作序列的外部**。
+
+#### 轻量级锁
+
+没有多线程竞争的前提下，减少传统的重量级锁使用操作系统互斥量产生的性能损耗。
+
+**对象头**：
+
+- 存储对象自身的运行数据；
+- 方法区对象类型数据的指针；
+- 数组时，额外的数组长度。
+
+步骤：
+- 当前线程的栈帧中建立一个**锁记录**(`Lock Record`)的空间，用来存储锁对象目前的 `Mark Word` 的拷贝(`Displaced Mark Word`)；
+- `CAS` 将对象的 `Mark Word` 更新为指向 `Lock Record` 的指针；
+    - 成功，则拥有对象的锁，将 `Mark Word` 的锁标志位设置为 `00`；
+    - 失败，至少一条线程竞争，检查对象的 `Mark Word` 是否指向当前线程的栈帧；
+        - 是，直接进入同步；
+        - 否，被其他线程抢占，**膨胀**为**重量级锁**，锁标志位 `10`。
+
+> 绝大部分的锁，在整个同步周期不存在竞争。
+
+#### 偏向锁
+
+**偏向第一个获得它的线程**。
+
+- 锁标志 `01`，偏向模式 `1`， `CAS` 获取这个锁的线程的 `ID` 记录在对象的 `Mark Word` 中；
+    - 成功，持有偏向锁的线程每次进入同步块时，不再进行任何同步操作；
+    - 另一个线程尝试获得锁，立马结束。根据锁对象目前是否被**锁定的状态**决定**是否撤销偏向**(`0`)，撤销后标志位恢复到**未锁定**，恢复到位锁定(`01`)或轻量级锁(`00`)。
