--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -15,7 +15,8 @@ categories: Java
 ![sentinel-class]({{ site.url }}/assets/imgs/sentinel/core-class.png)
 
 {% comment %}
-```plantuml 核心类
+```plantuml 
+@startuml 核心类
 interface Metric {
     + long success()
     + long exception()
@@ -43,7 +44,23 @@ abstract class LeapArray<T> {
     # abstract WindowWrap<T> resetWindowTo(WindowWrap<T> windowWrap, long startTime)
 }
 
-ArrayMetric "1" *-- "1" LeapArray
+ArrayMetric *-- LeapArray
+
+class OccupiableBucketLeapArray {
+    FutureBucketLeapArray borrowArray
+}
+
+class FutureBucketLeapArray {
+}
+
+class BucketLeapArray {
+}
+
+LeapArray <|--- OccupiableBucketLeapArray
+LeapArray <|--- BucketLeapArray
+LeapArray <|--- FutureBucketLeapArray
+OccupiableBucketLeapArray *-- FutureBucketLeapArray
+
 
 class WindowWrap<T> {
     - long windowLengthInMs
@@ -72,5 +89,6 @@ enum MetricEvent {
 }
 
 MetricBucket - MetricEvent: counters 长度和元素顺序 >
+@enduml
 ```
 {% endcomment %}
