--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -129,3 +129,14 @@ public ArrayMetric(int sampleCount, int intervalInMs, boolean enableOccupy) {
 
 - 所有属性在创建 `LeapArray` 时就已经确定；
 - 使用 `AtomicReferenceArray` 来帮助 `MetricBucket` 数组的原子性。
+
+### 当前窗口
+
+`WindowWrap<T> currentWindow(long timeMillis)` 根据当前时间来确定处于哪个时间窗口：
+- 如果 `bucket` 缺失，则创建后 **CAS** 到 `data` 中；
+- 如果 `bucket` 不缺：
+  - 如果 `bucket` 是实时有效的，则直接返回；
+  - 如果 `bucket` 是废弃的，则通过 `updateLock` 锁后，重置 `bucket`。
+
+
+> `AtomicReferenceArray`、`Thread.yield()` 值得注意。这里 `WindowWrap` 数组中的元素是懒加载，创建后就反复使用这些。
