--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -233,3 +233,116 @@ com.alibaba.csp.sentinel.slots.system.SystemSlot
 com.alibaba.csp.sentinel.slots.block.flow.FlowSlot
 com.alibaba.csp.sentinel.slots.block.degrade.DegradeSlot
 ```
+
+### Context
+
+在 `entryWithPriority` 中有初始化 `context` 的代码：
+
+```java
+ if (context == null) {
+    // Using default context.
+    context = InternalContextUtil.internalEnter(Constants.CONTEXT_DEFAULT_NAME);    // sentinel_default_context
+ }
+```
+
+```java
+protected static Context trueEnter(String name, String origin) {
+    Context context = contextHolder.get();
+    if (context == null) {
+        Map<String, DefaultNode> localCacheNameMap = contextNameNodeMap;
+        DefaultNode node = localCacheNameMap.get(name);
+        if (node == null) {
+            if (localCacheNameMap.size() > Constants.MAX_CONTEXT_NAME_SIZE) {
+                setNullContext();
+                return NULL_CONTEXT;
+            } else {
+                LOCK.lock();
+                try {
+                    node = contextNameNodeMap.get(name);
+                    if (node == null) {
+                        if (contextNameNodeMap.size() > Constants.MAX_CONTEXT_NAME_SIZE) {
+                            setNullContext();
+                            return NULL_CONTEXT;
+                        } else {
+                            node = new EntranceNode(new StringResourceWrapper(name, EntryType.IN), null);
+                            // Add entrance node.
+                            Constants.ROOT.addChild(node);
+
+                            Map<String, DefaultNode> newMap = new HashMap<>(contextNameNodeMap.size() + 1);
+                            newMap.putAll(contextNameNodeMap);
+                            newMap.put(name, node);
+                            contextNameNodeMap = newMap;
+                        }
+                    }
+                } finally {
+                    LOCK.unlock();
+                }
+            }
+        }
+        context = new Context(node, name);
+        context.setOrigin(origin);
+        contextHolder.set(context);
+    }
+
+    return context;
+}
+```
+
+- `ThreadLocal` 中存 `Context`，每个线程会有一个 `Context`；
+- `Local cache map` 中存 `EntranceNode`；
+- 用双重检测锁；
+- 新建的 `EntranceNode` 会加到 `ROOT` 中；
+
+![context-class]({{ site.url }}/assets/imgs/sentinel/context-class.png)
+{% comment %}
+```plantuml
+@startuml context 类图
+class Context {
+    - String name
+    - DefaultNode entranceNode
+    - Entry curEntry
+    - String origin
+    - boolean async
+}
+
+interface Node {
+    + xxRequest()
+    + xxSuccess()
+    + xxQps()
+    + xxRt()
+    + Map<Long, MetricNode> metrics()
+}
+
+Context *-- Node
+
+class StatisticNode {
+    - Metric rollingCounterInSecond
+    - Metric rollingCounterInMinute
+    - LongAdder curThreadNum
+}
+
+Node <|-- StatisticNode
+
+class DefaultNode {
+    - ResourceWrapper id
+    - Set<Node> childList
+    - ClusterNode clusterNode
+}
+
+StatisticNode <|-- DefaultNode
+
+class Entry {
+    - long createTimestamp
+    - long completeTimestamp
+    - Node curNode
+    - Node originNode
+    - Throwable error
+    - BlockException blockError
+    # ResourceWrapper resourceWrapper
+}
+
+Context *-- Entry
+Entry *-- Node
+@enduml
+```
+{% endcomment %}
