--- a/_posts/2020-08-31-Sentinel.md
+++ b/_posts/2020-08-31-Sentinel.md
@@ -344,6 +344,16 @@ class Entry {
 
 Context *-- Entry
 Entry *-- Node
+
+class CtEntry {
+    # Entry parent
+    # Entry child
+    # ProcessorSlot<Object> chain
+    # Context context
+}
+
+Entry <|-- CtEntry
+CtEntry *-- Context
 @enduml
 ```
 {% endcomment %}
